# RL_trading_system

./: .gitattributes  .gitignore  Dockerfile  README.md  build_cpp.sh  dqn_model.pt  ppo_actor_critic.pt  requirements.txt  setup.md  setup.sh  structure.txt  train_dqn.py  train_ppo.py
3_data/low_dimension/: simulated_copula_data.csv
alpha_engine/inference/: predict.py
cpp_core/: CMakeLists.txt
cpp_core/bindings/: data_bindings.cpp  order_bindings.cpp
cpp_core/include/: order_executor.hpp
cpp_core/src/: order_executor.cpp
cpp_implementation/: README.md
cpp_implementation/cpp_core/: CMakeLists.txt  build_cpp.sh
cpp_implementation/cpp_core/bindings/: data_bindings.cpp  main_bindings.cpp  order_bindings.cpp
cpp_implementation/cpp_core/include/: order.hpp  order_executor.hpp
cpp_implementation/cpp_core/include/policies/: delayed_fill.hpp  immediate_fill.hpp  price_threshold.hpp
cpp_implementation/cpp_core/src/: data_feed.cpp  order_executor.cpp
data/: SPY_1d.csv
data/low_dimension/: real_asset_log_returns.csv  (+2 more)
env/: data_loader.py  trading_env.py
evaluation/: evaluate_strategies.py  metrics.py
exploration/: latent_bonus.py
pybuild/: setup.py
scripts/: build_cpp_module.sh  compare_algorithms.py  compare_cppo.py  compare_ppo.py  compare_sac.py  compare_strategies.py  download_data.py  run_realtime.py  run_training.sh  set_up.sh  test_cpp_module.py  test_dqn.py  test_env.py  test_model.py  test_order_executor.py  test_ppo.py  test_random.py  test_reward.py  train_dqn.py  train_ppo.py  train_rl.py
theory/: README.md  rl_objective.md
(+46 files in other folders)
